--- a/src/app/module/dashboard/dashboard/dashboard.component.html
+++ b/src/app/module/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
+<div class="container-fluid mx-0 p-0">
+  <app-app-sama-navbar></app-app-sama-navbar>
+</div>
 <router-outlet>
 
 </router-outlet>
-<app-footer></app-footer>
+
