--- a/src/app/sama-common/app-sama-navbar/app-sama-navbar.component.html
+++ b/src/app/sama-common/app-sama-navbar/app-sama-navbar.component.html
@@ -1,27 +1,26 @@
 <div class="container-fluid px-0 mx-0">
-<nav class="navbar navbar-dark bg-secondary  px-0 mx-0" style="min-height:40px;direction: rtl">
-  <div class=" row d-flex justify-content-between w-100">
-    <div class=" col-3 d-flex justify-content-around" >
-      <div class="d-flex justify-content-center align-items-center">
-        <a href="#"><img src="../../../assets/icon/menu-small.png"></a>
+  <nav class="navbar navbar-dark bg-secondary  px-0 mx-0" style="min-height:40px;direction: rtl">
+    <div class=" row d-flex justify-content-between w-100">
+      <div class=" col-3 d-flex justify-content-around">
+        <div class="d-flex justify-content-center align-items-center">
+          <a href="#"><img src="../../../assets/icon/menu-small.png"></a>
+        </div>
+        <div class="d-flex align-content-center align-items-center justify-content-center">
+          <a class="navbar-brand ps-2 text-dark" href="#">سیستم جامع پایش سلامت دانشجو</a>
+        </div>
       </div>
-      <div class="d-flex align-content-center align-items-center justify-content-center">
-        <a class="navbar-brand ps-2 text-dark" href="#">سیستم جامع پایش سلامت دانشجو</a>
+      <div class=" d-flex justify-content-around align-items-center col-1">
+        <div class="d-flex justify-content-center ">
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item>خروج</button>
+          </mat-menu>
+          <button [matMenuTriggerFor]="menu" aria-label="Example icon button with a vertical  icon" color="black"
+                  mat-button>
+            <img src="assets/icon/power-off.png">
+          </button>
+        </div>
       </div>
     </div>
-    <div class=" d-flex justify-content-around align-items-center col-1">
-      <div class="d-flex justify-content-center ">
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item>front</button>
-          <button mat-menu-item>back</button>
-        </mat-menu>
-        <a mat-flat-button ><img src="assets/icon/notifications-small.png"></a>
-      </div>
-      <div class="d-flex justify-content-center ">
-        <a><img src="assets/icon/power-off.png"></a>
-      </div>
-    </div>
-  </div>
 
-</nav>
+  </nav>
 </div>
