--- a/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
+++ b/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
@@ -1,9 +1,11 @@
 <mat-sidenav-container class="bg-white text-dark row justify-content-start h-100 p-0 m-0">
   <mat-sidenav #sidenav [opened]="isShowing" class="h-100 p-0 m-0 col-md-4">
     <div class="bg-secondary p-0 m-0" style="height: 100% ;width: 100%">
-      <div class="row justify-content-center align-items-center  p-0 m-0">
-        <div class="row justify-content-center col-10">
-          farhang
+      <div class="row  justify-content-end align-items-center p-0 m-0">
+        <div class="d-flex justify-content-end align-items-center pt-2 col-3">
+          <a (click)="toggleSidenav()">
+            <mat-icon class="text-dark">close</mat-icon>
+          </a>
         </div>
       </div>
     </div>
