farhang irani 1402/02/28 part-1

--- a/src/app/sama-common/app-sama-navbar/app-sama-navbar.component.html
+++ b/src/app/sama-common/app-sama-navbar/app-sama-navbar.component.html
@@ -11,7 +11,7 @@
         </div>
         <div
           class="col-sm-6 col-md-3 col-lg-6 col-9 navbar-brand d-flex justify-content-center align-items-center align-content-center">
-          <h2 class="p-0 m-0 text-dark ">سیستم پایش سلامت دانشجو</h2>
+          <a (click)="onGoToHome()"><h2 class="p-0 m-0 text-dark ">سیستم پایش سلامت دانشجو</h2></a>
         </div>
       </div>
     </div>
