--- a/src/app/module/dashboard/dashboard/dashboard.component.html
+++ b/src/app/module/dashboard/dashboard/dashboard.component.html
@@ -1,11 +1,8 @@
-<div class="container-fluid mx-0 p-0">
-  <!--  <app-app-sama-navbar (sideNavEvent)="navBarEvent"></app-app-sama-navbar>-->
-</div>
-<div class="row p-0 m-0  w-100" style="direction: rtl">
-  <app-app-sama-side-nav [sideNavEvent]="navBarEvent" class="p-0 m-0"></app-app-sama-side-nav>
+<div class="row p-0 m-0  w-100" style="direction: rtl ;height: 100%">
+
+  <app-app-sama-side-nav [sideNavEvent]="navBarEvent" class=" p-0 m-0"></app-app-sama-side-nav>
+
 
 </div>
-<!--<router-outlet>-->
 
-<!--</router-outlet>-->
 
