--- a/src/app/module/dashboard/dashboard/dashboard.component.html
+++ b/src/app/module/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row p-0 m-0  w-100" style="direction: rtl ;height: 100%">
 
-  <app-app-sama-side-nav [sideNavEvent]="navBarEvent" class=" p-0 m-0"></app-app-sama-side-nav>
+  <app-app-sama-side-nav [sideNavEvent]="navBarEvent" class=" p-0 m-0 h-100"></app-app-sama-side-nav>
 
 
 </div>
