--- a/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
+++ b/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
@@ -118,20 +118,16 @@
     </div>
   </mat-sidenav>
 
-  <mat-sidenav-content class="row justify-content-end bg-white h-100 p-0 m-0 ">
-    <app-app-sama-navbar class="m-0 p-0"></app-app-sama-navbar>
-    <div class="d-flex  justify-content-end p-0 m-0" style="height:100%">
-      <div class="row">
+  <mat-sidenav-content class=" justify-content-end bg-white  p-0 m-0 ">
+    <app-app-sama-navbar class="m-0 p-0 "></app-app-sama-navbar>
+    <!--      <div class="row">-->
+    <!--      <div class="row  p-0 m-0 col-2">-->
+    <!--        <button (click)="toggleSidenav()" class="bg-secondary" color="primary" mat-button>Toggle</button>-->
+    <!--      </div>-->
+    <div class=" w-100 p-0 m-0" style="height:94%">
+      <router-outlet class="p-0 m-0">
 
-      </div>
-      <div class="row  p-0 m-0 col-2">
-        <button (click)="toggleSidenav()" class="bg-secondary" color="primary" mat-button>Toggle</button>
-      </div>
-      <div class="row col-10">
-        <router-outlet>
-
-        </router-outlet>
-      </div>
+      </router-outlet>
     </div>
 
 
