farhang irani 1402/02/28 part-2

--- a/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
+++ b/src/app/sama-common/app-sama-side-nav/app-sama-side-nav.component.html
@@ -121,9 +121,9 @@
   <mat-sidenav-content class=" justify-content-end bg-white  p-0 m-0 ">
     <app-app-sama-navbar class="m-0 p-0 "></app-app-sama-navbar>
     <!--      <div class="row">-->
-    <!--      <div class="row  p-0 m-0 col-2">-->
-    <!--        <button (click)="toggleSidenav()" class="bg-secondary" color="primary" mat-button>Toggle</button>-->
-    <!--      </div>-->
+    <div class="row  p-0 m-0 col-2">
+      <button (click)="toggleSidenav()" class="bg-secondary" color="primary" mat-button>Toggle</button>
+    </div>
     <div class=" w-100 p-0 m-0" style="height:94%">
       <router-outlet class="p-0 m-0">
 
