--- a/src/app/module/dashboard/home/home.component.html
+++ b/src/app/module/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid h-100 border border-2 border-dark">
+<div class="container-fluid h-100 border border-2 border-dark main-container">
   <p>home works!</p>
 </div>
 
