--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.main-container {
+  background-color: #ececec;
+}
+
+.text-light {
+  color: #ececec;
+}
+
+.text-mid-dark {
+  color: #bfbdbd;
+}
+
+.text-dark {
+  color: #595958;
+}
