--- a/src/app/module/dashboard/home/home.component.html
+++ b/src/app/module/dashboard/home/home.component.html
@@ -1,4 +1,130 @@
-<div class="container-fluid h-100 border border-2 border-dark main-container">
-  <p>home works!</p>
-</div>
+<mat-toolbar color="primary">
+  <button (click)="drawer.toggle()"
+          mat-icon-button matTooltip="Menu">
+    <mat-icon style="color: white">menu</mat-icon>
+  </button>
+  <span>پژوهشی</span>
+  <span class="toolbar-item-spacer"></span>
+  <button [matMenuTriggerFor]="userAccountMenu" mat-icon-button matTooltip="My Account">
+    <mat-icon style="color: white">account_circle</mat-icon>
+  </button>
+  <mat-menu #userAccountMenu [overlapTrigger]="false" yPosition="below">
+    <button mat-menu-item routerLink="#">
+      <mat-icon>exit_to_app</mat-icon>
+      Logout
+    </button>
+  </mat-menu>
+</mat-toolbar>
+<mat-sidenav-container autosize class="app-container">
+  <mat-sidenav #drawer [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [class.mat-elevation-z4]="true"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false" class="sidenav col-md-2" mode="side" opened="true">
+    <mat-nav-list>
+      <mat-expansion-panel [class.mat-elevation-z0]="true">
+        <mat-expansion-panel-header>
+          <mat-icon>dashboard</mat-icon>
+          <span>اطلاعات پایه</span>
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.INDEXER_TYPE_COMPONENT]" mat-list-item-->
+          <!--             routerLink="#">-->
+          <!--            <mat-icon>apple</mat-icon>-->
+          <!--            <span>انواع ایندکس نشریات</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.ACTIVITY_TYPE_COMPONENT]" mat-list-item-->
+          <!--             routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع فعالیت ها</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.JOURNAL_TYPE_COMPONENT]" mat-list-item-->
+          <!--             routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع نشریه</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.COST_TYPE_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع هزینه</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.CONFERENCE_TYPE_COMPONENT]" mat-list-item-->
+          <!--             routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع همایش</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLinkActive]="'activeItem'" [routerLink]="[Route.SCIENTIFIC_GROUP_TYPE_COMPONENT]" mat-list-item-->
+          <!--             routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع گروه علمی نشریه</span>-->
+          <!--          </a>-->
+        </mat-nav-list>
+      </mat-expansion-panel>
+      <mat-expansion-panel [class.mat-elevation-z0]="true">
+        <mat-expansion-panel-header>
+          اطلاعات جزئیات
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <!--          <a [routerLink]="[Route.ACTIVITY_PROPERTY_TYPE_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع جزئیات فعالیت ها</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.ACTIVITY_PROPERTY_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>جزئیات فعالیت ها</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.ACTIVITY_PROPERTY_ITEM_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>معرفی جزئیات فعالیت ها</span>-->
+          <!--          </a>-->
+        </mat-nav-list>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel [class.mat-elevation-z0]="true">
+        <mat-expansion-panel-header>
+          بررسی فعالیت ها
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <!--          <a [routerLink]="[Route.ACTIVITY_STATUS_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>انواع وضعیت بررسی فعالیت</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.REVIEW_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>بررسی</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.REVIEW_SCHEDULE_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>زمانبندی بررسی</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.ACTION_REVIEW_STEP_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>مراحل بررسی</span>-->
+          <!--          </a>-->
+        </mat-nav-list>
+      </mat-expansion-panel>
+
+      <mat-expansion-panel [class.mat-elevation-z0]="true">
+        <mat-expansion-panel-header>
+          پژوهشی
+        </mat-expansion-panel-header>
+        <mat-nav-list>
+          <!--          <a [routerLink]="[Route.ACTIVITY_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>فعالیت ها</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.JOURNAL_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>نشریات</span>-->
+          <!--          </a>-->
+          <!--          <a [routerLink]="[Route.CONFERENCE_COMPONENT]" mat-list-item routerLink="#">-->
+          <!--            <mat-icon>android</mat-icon>-->
+          <!--            <span>همایش ها</span>-->
+          <!--          </a>-->
+        </mat-nav-list>
+      </mat-expansion-panel>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-dashboard></app-dashboard>
+  </mat-sidenav-content>
+</mat-sidenav-container>
 
